# python-learning

./: pyproject.toml
_fastapi/: app.py  event_manager.py
_mypy/: sample.py  util.py
dunder/: all.py  app.py
orm/: alembic.ini  database.py  main.py  models.py  requirements.txt
orm/alembic/versions/: 88a5bc3008fb_initial_migration.py
ruff/: main.py  utils.py
