[project]
name = "python-learning"
version = "0.1.0"
description = ""
authors = [{ name = "Mohammed Shahul P.M", email = "mshahulpm@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["ruff (>=0.11.6,<0.12.0)", "mypy (>=1.15.0,<2.0.0)", "fastapi (>=0.115.12,<0.116.0)", "uvicorn (>=0.34.2,<0.35.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
ignore_missing_imports = true
show_error_codes = true
